--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta name="google-site-verification" content="PqTu-4MXlmAwkW8OG6Ko5CM-DKIlcuK7ggkryDm3UgA" />
     <title>通向财富自由之路</title>
     <%= csrf_meta_tags %>
-  
+    <script src="/ckeditor/config.js"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -16,5 +16,15 @@
       <%= yield %>
      </div>
      <%= render "common/footer" %>
+
+     <script type="text/javascript">$(document).ready(function() {
+    if ($('textarea').length > 0) {
+        var data = $('textarea');
+        $.each(data, function(i) {
+            CKEDITOR.replace(data[i].id);
+        });
+    }
+     });</script> 
+
   </body>
 </html>
