--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -26,7 +26,12 @@
     <%= f.input :image, as: :file %>
   </div>
 
-
+  <div class="group">
+    <%#= f.input :image, as: :file %>
+    <%= f.label :avatar %><br>
+    <%= f.file_field :avatar, :multiple => true, name: "photos[avatar][]" %>
+  </div>
+  
   <%= f.submit "Submit", data: { disable_with: "Submitting..." } %>
 
 <% end %>
