--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,26 +1,46 @@
-<div class="row">
-  <div class="col-md-6">
-    <% if @product.image.present? %>
-      <%= image_tag(@product.image.medium.url, class: "thumbnail") %>
-    <% else %>
-      <%= image_tag("http://placehold.it/400x400&text=No Pic", class: "thumbnail") %>
-    <% end %>
-  </div>
-  <div class="col-md-6">
-    <h2> <%= @product.title %> </h2>
-    <div style="height:100px;">
-      <p>
-        <%= @product.description %>
-      </p>
-    </div>
-    <div> 数量 : <%= @product.quantity %> </div>
-    <div class="product-price"> ￥ <%= @product.price %> </div>
-    <div class="pull-right">
-            <% if @product.quantity.present? && @product.quantity > 0 %>
-           <%= link_to("加入购物车", add_to_cart_product_path(@product), :method => :post, :class => "btn btn-primary btn-lg btn-danger") %>
-           <% else %>
-           已销售一空，无法购买
+
+<div class="container">
+ <div class="row">
+  <div class="col-md-6 col-xs-12">
+    <% if @photos.present? %>
+       <div class="tab-content show-picture">
+         <% @photos.each_with_index do |p,index| %>
+           <% if index <5 %>
+            <div class= "tab-pane <%= render_active(index) %>" id="<%= index %>"><%= image_tag p.avatar.medium.url %>
+            </div>
            <% end %>
+         <% end %>
+       </div>
+
+       <ul class="show-photo-xsmall-box nav nav-tabs">
+         <% @photos.each_with_index do |p,index| %>
+           <% if index <5 %>
+             <li><a href="#<%= index %>" data-toggle="tab"><%= image_tag p.avatar.small.url%></a></li>
+           <% end %>
+         <% end %>
+       </ul>
+      <% else %>
+        <%= image_tag("http://placehold.it/400x400&text=No Pic", class:"thumbnail") %>
+      <% end %>
+    </div>
+
+
+    <div class="col-md-6 col-xs-12">
+      <h2> <%= @product.title %> </h2>
+      <div style="height:100px;">
+        <p>
+          <%= raw( @product.description ) %>
+        </p>
+      </div>
+      <div> 数量 : <%= @product.quantity %> </div>
+      <div class="price"> ￥ <%= @product.price %> </div>
+      <div class="show-action clearfix">
+              <% if @product.quantity.present? && @product.quantity > 0 %>
+             <%= link_to("加入购物车", add_to_cart_product_path(@product), :method => :post, :class => "btn btn-primary btn-lg btn-danger") %>
+             <% else %>
+             已销售一空，无法购买
+             <% end %>
+      </div>
     </div>
   </div>
-</div>
+  </div>
